--- a/css/zv-style.css
+++ b/css/zv-style.css
@@ -1,3 +1,42 @@
 .header {
     grid-template-rows: 0px auto
 }
+
+.select2-selection.select2-selection--multiple {
+    min-height: 44px;
+    border-radius: 0px;
+}
+
+.select2.select2-container.select2-container--default.select2-container--below.select2-container--focus {
+    height: auto;
+}
+
+.block-finder__form-control.block-finder__form-control--select {
+    height: auto;
+    /* display: contents; */
+    flex: max-content;
+}
+
+.select2-selection__choice {
+    background-color: #fff !important;
+    border-radius: 0px !important;
+    color: #000 !important;
+    min-height: 30px !important;
+    padding-top: 3px !important;
+}
+
+.select2-selection__choice__remove {
+    padding-right: 2px;
+}
+
+.select2-selection__rendered {
+    overflow: auto;
+}
+
+.block-finder__form-control.block-finder__form-control--button {
+    flex-basis: 100%;
+}
+
+.block-finder__image {
+    height: 653.25
+}
